--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="icon" href="/Frontend/Main/Preview.png">
 </head>
 <body>
   <header>
