--- a/stopwatch.html
+++ b/stopwatch.html
@@ -25,6 +25,6 @@
     </div>
   </main>
 
-  <script src="/Backend/JavaScript/stopwatch.js"></script>
+  <script src="stopwatch.js"></script>
 </body>
 </html>
