--- a/login.html
+++ b/login.html
@@ -10,20 +10,23 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import {
       getAuth,
-      signInWithEmailAndPassword
+      signInWithEmailAndPassword,
+      signInWithPopup,
+      GoogleAuthProvider
     } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyD6kIjXk0UKJ5TzKce5ayVAsycR3bcuBiY",
       authDomain: "timeapp-1b0ec.firebaseapp.com",
       projectId: "timeapp-1b0ec",
-      storageBucket: "timeapp-1b0ec.firebasestorage.app",
+      storageBucket: "timeapp-1b0ec.appspot.com",
       messagingSenderId: "691836486540",
       appId: "1:691836486540:web:f8f936597ba21fbecd0ca9"
     };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth();
+    const provider = new GoogleAuthProvider();
 
     window.handleLogin = async function (e) {
       e.preventDefault();
@@ -36,7 +39,20 @@
         await signInWithEmailAndPassword(auth, email, password);
         message.textContent = "Login successful!";
         message.style.color = "#00ffae";
+      } catch (error) {
+        message.textContent = error.message;
+        message.style.color = "#f44336";
+      }
+    };
 
+    window.handleGoogleLogin = async function () {
+      const message = document.getElementById("message");
+
+      try {
+        const result = await signInWithPopup(auth, provider);
+        const user = result.user;
+        message.textContent = `Welcome ${user.displayName}!`;
+        message.style.color = "#00ffae";
       } catch (error) {
         message.textContent = error.message;
         message.style.color = "#f44336";
@@ -48,19 +64,29 @@
   <header>
     <h2>Login</h2>
     <div class="nav-buttons">
-        <a href="home.html">
-            <button>Home</button>
-        </a>
+      <a href="home.html">
+        <button>Home</button>
+      </a>
     </div>
   </header>
+
   <form onsubmit="handleLogin(event)">
     <div class="container">
-        <input type="email" id="email" placeholder="Email" required />
-        <input type="password" id="password" placeholder="Password" required />
-        <div class="message" id="message"></div>
-        <button type="submit">Login</button>
-        <div>
-            <label>Don't have an account? <a href="register.html">Sign Up</a></label>
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <div class="message" id="message"></div>
+      <button type="submit">Login</button>
+
+<div style="margin-top: 10px;">
+  <button type="button" onclick="handleGoogleLogin()" style="background: none; border: none; cursor: pointer;">
+    <img src="https://developers.google.com/identity/images/btn_google_signin_light_normal_web.png" alt="Sign in with Google" />
+  </button>
+</div>
+
+
+
+      <div style="margin-top: 10px;">
+        <label>Don't have an account? <a href="register.html">Sign Up</a></label>
       </div>
     </div>
   </form>
