--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Check the current time, local weather, and live forecasts instantly. A clean and simple tool for quick global time & weather updates." />
-  <title>Current Date & Time</title>
+  <title>TimeNow</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -17,7 +17,6 @@
     <nav class="nav-buttons">
       <div class="nav1">
       <a href="home.html"><button>Home</button></a>
-      <a href="chat.html"><button>Chat Room</button></a>
       <button id="worldBtn">World Time</button>
 
       <div class="dropdown">
@@ -42,7 +41,6 @@
           <a href="register.html">Register</a>
           <a href="dashboard.html">Dashboard</a>
           <a href="contact.html">Contact</a>
-          <a href="admin.html">Admin Login</a>
         </div>
       </div>
       </div>
@@ -79,6 +77,21 @@
         <div class="phase"></div>
       </div>
   </div>
+  <br>
+  <br>
+  <footer>
+  <div style="flex-direction: column;">
+    <div>
+      <p>&copy; TimeNow</p>
+    </div>
+    <div>
+      <a href="admin.html" target="_blank">Admin Login</a>
+    </div>
+    <div>
+      <p>Powered by Netlify and Firebase</p>
+    </div>
+  </div>
+  </footer>
 
 
 
