--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>TimeNow - Contact</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="icon" href="/Frontend/Main/Preview.png">
 </head>
