--- a/timer.html
+++ b/timer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Timer</title>
+  <title>TimeNow - Timer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
